# banking-ledger-rs

./: .cursorrules  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_R9_R15.md  AUDIT_REPORT.md  Cargo.toml  Dockerfile  Makefile  README.md  banking-ledger.service  docker-compose.yml  test_api.py
.config/: nextest.toml
.github/workflows/: ci.yml
.pm/: api-contract.md  concurrency-model.md  event-sourcing.md  financial-correctness.md  rca-warnings.md  security-model.md
.surreal/: schema.surql
src/: advanced_edge_tests.rs  affinity_edge_tests.rs  audit_bug_regression.rs  benchmarks.rs  boundary_probe_extended_tests.rs  boundary_probe_tests.rs  deep_correctness_tests.rs  dlq_edge_tests.rs  edge_cases_test.rs  event_bus_edge_cases.rs  event_log_edge_tests.rs  exhaustive_edge_tests.rs  extensions.rs  hash_chain_verify_edge_tests.rs  journal_audit_edge_tests.rs  lib.rs  main.rs  rbac.rs  rbac_edge_tests.rs  regression_tests.rs  saga_edge_tests.rs  serde_edge_tests.rs  surrealdb_edge_tests.rs
src/api/: mod.rs
src/domain/: account.rs  account_coverage_tests.rs  account_test.rs  coa.rs  coa_test.rs  identifier.rs  journal.rs  journal_coverage_tests.rs  journal_test.rs  mod.rs  money.rs  money_coverage_tests.rs  money_test.rs  party.rs  party_identifier_test.rs
src/log/: event_bus.rs  event_log.rs  hash_chain.rs  hash_chain_coverage_tests.rs  hash_chain_edge_tests.rs  mod.rs  ring_buffer.rs  signing.rs
src/service/: account_service.rs  account_service_exhaustive_test.rs  mod.rs  (+21 more)
tests/: dashmap_sanity.rs  integration_extended.rs  party_coa_tests.rs
(+2 files in other folders)
