[package]
name = "banking-ledger"
version = "0.1.0"
edition = "2021"
description = "High-throughput financial ledger core in Rust — immutable, double-entry, hash-chain verified."

[dependencies]
# Financial math
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Identity
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.8", features = [] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Concurrent data structures
dashmap = "6"
rand = "0.8"
libc = "0.2"

# Database
surrealdb = "3"

[features]
default = ["full"]
full = []

[dev-dependencies]
tokio-test = "0.4"
